<package>
  <name>rosproxy</name>
  <version>0.1.1</version>
  <description>
    Metapackage for core of rosproxy.
  </description>
  <author>Chad Attermann</author>
  <maintainer email="chad@ecostechnologies.com">Chad Attermann</maintainer>
  <license>BSD</license>
  <url>https://github.com/ecostech/rosproxy</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosproxy_msgs</run_depend>
  <run_depend>rosproxy_server</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
